Fix center-alignment on label-container

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -111,6 +111,7 @@ A {
 
       padding: 4px 20px 4px;
       margin-top: 20px;
+      white-space: nowrap;
 
       background-color: $almostWhite;
       color: $darkBlue;
